[gd_scene load_steps=5 format=2]

[ext_resource path="res://other/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Scene 06.gd" type="Script" id=2]
[ext_resource path="res://objects/Platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/Wall.tscn" type="PackedScene" id=4]

[node name="Level" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Active" parent="." index="0"]
editor/display_folded = true

[node name="Ball" parent="Active" index="0"]
position = Vector2( 480, 750 )

[node name="Goal" parent="Active" index="1"]
position = Vector2( 1384, 280 )

[node name="Objects" parent="." index="1"]
editor/display_folded = true

[node name="Platform1" parent="Objects" index="0" instance=ExtResource( 3 )]
position = Vector2( 480, 790 )

[node name="Platform7" parent="Objects" index="1" instance=ExtResource( 3 )]
position = Vector2( 552, 790 )
scale = Vector2( 2, 1 )

[node name="Platform2" parent="Objects" index="2" instance=ExtResource( 3 )]
position = Vector2( 1384, 336 )

[node name="Wall" parent="Objects" index="3" instance=ExtResource( 4 )]
position = Vector2( 860, 276 )
scale = Vector2( 1, 12 )

[node name="Wall2" parent="Objects" index="4" instance=ExtResource( 4 )]
position = Vector2( 1416, 184 )
scale = Vector2( 1, 8 )

[node name="Platform3" parent="Objects" index="5" instance=ExtResource( 3 )]
position = Vector2( 892, 530 )

[node name="Platform4" parent="Objects" index="6" instance=ExtResource( 3 )]
position = Vector2( 940, 530 )

[node name="Platform5" parent="Objects" index="7" instance=ExtResource( 3 )]
position = Vector2( 988, 530 )

[node name="Platform6" parent="Objects" index="8" instance=ExtResource( 3 )]
position = Vector2( 1036, 530 )
